--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,11 @@
     font-family: adelia;
     src: url(../fonts/adelia.ttf);
 }
-*{
-    margin: 0 !important;
-}
 body{
     font-size: 18px;
     font-family: inter;
     height: 100vh;
     overflow-x: hidden !important;
-    width: 100vw;
-    padding: 0;
-    margin: 0;
 }
 /* sit navbar top */
 .navbar{
@@ -22,6 +16,9 @@ body{
 .navbar-toggler:focus{
     outline: none;
 }
+.navbar-toggler{
+    padding: 5px !important;
+}
 .navbar-brand img{
     width: 50px;
     border-radius: 100%;
@@ -29,7 +26,9 @@ body{
 .navbar-collapse{
     text-align: right;
 }
-
+.nav-item{
+    text-align: right;
+}
 .nav-link{
     font-weight: bold;
     color: white !important;
@@ -54,7 +53,7 @@ body{
     background-position: center;
 }
 .sit-banner h1{
-    font-size: 4rem;
+    font-size: 4.5rem;
     width: 12ch;
     text-transform: uppercase;
     font-weight: 900;
@@ -77,9 +76,11 @@ body{
 
 /*sit program*/
 .sit-program{
-    height: 100%;
+    height: max-content;
     background-color: #fff;
     padding: 70px 0px !important;
+    position: relative;
+    
 }
 .sit-program p{
     width: 58ch;
@@ -91,7 +92,7 @@ body{
     height: max-content;
     position: relative;
     color: white;
-    padding: 40px 0;
+    padding: 40px 0 !important;
     
 }
 .mission-vision h1{
@@ -116,16 +117,19 @@ body{
 .dean-faculty{
     height: max-content;
     background-color: #fff;
-    padding: 80px 0px;
+    padding: 80px 10px !important;
 }
 
 /*card*/
 .card{
     background-color: #500020;
     color: white;
-    margin-top: 10px !important;
     height: 500px;
-    padding: 20px 0;
+    padding: 20px 10px !important;
+    margin: 10px 10px !important;
+}
+.card h5,h6,p{
+    display: inline-block;
 }
 .card .one{
     display: flex;
@@ -155,7 +159,7 @@ body{
     width: 70px;
 }
 .card .two{
-    padding: 10px 0;
+    padding: 10px 0 !important;
 }
 
 /*other styles*/
@@ -177,8 +181,9 @@ body{
 .awards{
     height: 100%;
     background-color: #fff;
-    padding: 50px 20px;
+    padding: 50px 20px !important;
     color: black;
+    height: max-content;
 
 }
 .awards div h1.main-lead-b{
@@ -192,11 +197,11 @@ body{
 .awards h3{
     max-width: 60ch;
     font-size: 1.1rem;
-    margin-bottom: 30px;
+    margin-bottom: 30px !important;
 }
 .awards h3 i{
     font-size: 1rem;
-    margin-right: 10px;
+    margin-right: 10px !important;
 }
 .awards h3 span{
     color: #500020;
@@ -210,23 +215,26 @@ body{
 .equipment-facility{
     background-color: rgba(253,4,127);
     height: max-content;
-    padding: 50px 0;
+    padding: 50px 0 !important;
 }
 .equipment-facility h1{
     width: 12ch;
 }
 .carousel-caption{
     background-color: rgba(0,0,0,.5);
+    padding: 10px !important;
 }
 .carousel-item img{
     height: 400px;
 }
-
+.carousel-indicators li{
+    margin: 3px !important;
+}
 .footer{
     background-color: #500020;
     height: max-content;
     width: 100%;
-    padding: 0 50px;
+    padding: 20px 50px !important;
 }
 .footer img{
     width: 80px;
@@ -247,7 +255,7 @@ body{
 .footer .logo h5{
     color: white;
     font-weight: bold;
-    margin-left: 20px;
+    margin-left: 20px !important;
     width: 22ch;
 }
 .footer .contact p{
@@ -265,118 +273,49 @@ body{
     font-weight: bold;
 
 }
-@media (max-width:800px) {
-    body{
-        font-size: 16px;
-        overflow-x: hidden;
-    }
-    .vision{
-        justify-content: start;
-        text-align: left;
-    }
-    .sit-banner h1{
-        font-size: 3rem;
-    }
-    .sit-program h1{
-        font-size: 2.8rem;
-    }
-    .sit-program p{
-        width: 100%;
-    }
-    .lead-body{
-        font-size: 2rem;
-    }
-    .footer{
-        text-align: center;
-        padding: 50px 0;
-        height: max-content;
-    }
-    .footer div .logo,.contact{
-        height: 100px;
-    }
-    .footer .logo{
-        flex-direction: column;
-        
-    }
-    .footer .logo h5{
-        margin: 0;
-    }
-    
-    .footer .logo img{
-        margin-bottom: 10px;
-    }
-}
 
-
-/* media queries */
-@media (max-width:600px) {
-    body{
-        font-size: 14px !important;
-        overflow-x: hidden;
-    }
-    .sit-banner{
-        background-position: center;
-    }
-    .sit-banner h1{
-        font-size: 3rem;
-    }
-    .sit-banner h3{
-        font-size: 1.5rem;
-    }
-    .sit-banner h4{
-        font-size: 1rem;
-    }
-
-    .sit-program h1{
-        font-size: 2rem;
-    }
-    .sit-program h3{
-        font-size: 1.5rem;
-    }
-    .sit-program p{
-        width: 100%;
-    }
-    .lead-body{
-        font-size: 2rem;
-    }
-    .lead-head{
-        font-size: 1.5rem;
-
-    }
-    .vision{
-        text-align: left !important;
-        justify-content: start;
-        
-    }
-    .navbar{
-        background-color: #000;
-    }
-    .footer{
-        text-align: center;
-        padding: 50px 0;
-        height: max-content;
-    }
-    .footer div .logo,.contact{
-        height: 100px;
-    }
-    .footer .logo{
-        flex-direction: column;
-        
-    }
-    .footer .logo h5{
-        margin: 0;
-    }
-    
-    .footer .logo img{
-        margin-bottom: 10px;
-    }
-}
 
 @media only screen and (max-width: 767px) {
-
+    *{
+        margin: 0 !important;
+        padding: 0 !important;
+    }
     body{
         font-size: 12px;
         overflow-x: hidden;
+    }
+    .navbar{
+        padding: 20px !important;
+        background-color: #000;
+    }
+    .sit-banner{
+        padding: 20px !important;
+    }
+    .sit-program{
+        padding: 20px !important;
+    }
+    .sit-program p{
+        width: 100%;
+    }
+    .mission-vision{
+        padding: 40px 20px !important;
+        height:350px;
+    }
+    .mission-vision .vision{
+        text-align: left;
+        align-items: start;
+        justify-content: start;
+    }
+    .dean-faculty{
+        padding: 40px 20px !important;
+    }
+    .card{
+        margin: 20px 0 !important;
+        height: 400px;
+        padding: 20px !important;
+    }
+    .card-body{
+        margin-left: 30px !important;
     }
     .sit-banner h1{
         font-size: 2.4rem;
@@ -387,11 +326,35 @@ body{
     .sit-banner h3{
         margin-bottom: 10px !important;
     }
+    .equipment-facility{
+        padding: 50px 20px !important;
+    }
+    .equipment-facility .ef-slides{
+        margin-top: 20px !important;
+    }
+    .awards{
+        height: max-content;
+    }
     .lead-head{
         font-size: 1.4rem;
     }
     .lead-body{
         font-size: 1.8rem !important;
         max-width: 16ch;
+    }
+    .footer{
+        text-align: center;
+    }
+    .footer .logo{
+        flex-direction: column;
+        height: max-content;
+        padding: 10px 0 !important;
+    }
+    .footer .logo img{
+        margin-bottom: 10px !important;
+    }
+    .footer .contact{
+        height: max-content;
+        margin-bottom: 10px !important;
     }
 }
