--- a/css/style.css
+++ b/css/style.css
@@ -362,9 +362,12 @@ body{
     }
     .sit-banner h1{
         font-size: 2.4rem;
+        margin-bottom: 10px !important;
+        
     }
     .sit-banner h4{
         font-size: 1rem !important;
+        line-height:2rem;
     }
     .sit-banner h3{
         margin-bottom: 10px !important;
